drkns 27.06.2016 00:46:22 +0200 - build 4727

1. Продолжение экспериментальных изменений в запускателе.
   Должны лучше работать Ctrl-G и многострочные команды в User Menu.

shmuel 26.06.2016 16:37:24 +0200 - build 4726

1. Расширение возможностей функции Panel.SetCustomSortMode().

drkns 24.06.2016 23:19:28 +0200 - build 4725

1. С форума: при запуске программ индикатор административных прав почему-то остаётся на экране.

drkns 24.06.2016 01:39:45 +0200 - build 4724

1. Продолжение 4723 - исключение для ShiftEnter и поддержка run as.

drkns 24.06.2016 01:15:01 +0200 - build 4723

1. Очень экспериментальная фича: встроенные ассоциации распространяются на комстроку.

drkns 23.06.2016 22:46:27 +0200 - build 4722

1. Уточнение 4710.

drkns 23.06.2016 21:09:03 +0200 - build 4721

1. Новый параметр: far:config -> System.Executor.Comspec, определяет используемый командный процессор (по умолчанию %comspec%).

2. В System.Executor.ComspecArguments и System.Executor.ComspecCondition поддерживаются переменные окружения.

drkns 21.06.2016 21:33:36 +0200 - build 4720

1. Продолжение 4712.

2. gcc warning.

drkns 20.06.2016 00:20:17 +0200 - build 4719

1. Переменные в ExcludeCmds не разворачивались при использовании в автодополнении.

drkns 20.06.2016 00:15:19 +0200 - build 4718

1. #0003257: (far 3.0.4700.x64) Исключительная ситуация во Viewer при поиске HEX-значений

t-rex 19.06.2016 21:15:20 +0200 - build 4717

1. Mantis#2467: Застряёт регэксп поиск с заменой в редакторе

2. Не собиралось почему то в VC2015 update 3 (вроде баг в последнем)

drkns 18.06.2016 18:09:29 +0200 - build 4716

1. Уточнение 4715.

drkns 18.06.2016 13:55:55 +0200 - build 4715

1. С форума: неверная прорисовка часов с учетом региональных настроек.

drkns 18.06.2016 12:52:50 +0200 - build 4714

1. С форума: после копирования или переноса исчезают значки жестких ссылок на пассивной панели.

drkns 18.06.2016 11:51:33 +0200 - build 4713

1. Обход бага выхода из полноэкранного режима в Windows 10.
